--- a/index.html
+++ b/index.html
@@ -2,16 +2,13 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<title>Result</title>
+		<title>Practice website</title>
 	</head>
 	<body>
 		<h2 ID="intro">Introduction</h2>
-		<h3 class="standout">Classes and IDs in CSS</h3>
-		<p class="standout">Classes and IDs are super easy in CSS. You're using them right now!</p>
-		<h3>Regular HTML Selectors</h3>
-		<p>If you don't bother with a class or ID, an HTML element just gets
-		   the regular CSS styling for that element—or the default styling if you
-		   don't specify any particular styling on the stylesheet.
+		<h3 class="standout">Wasatch Range</h3>
+		<p class="standout">The Wasatch Range of Utah is a varied and interesting mountain range.</h3>
+		<p>While not as high or big as the Rockies, the Wasatch does offer many opportunities for recreation close to the city.
 		</p>
 	</body>
 </html>
